# itba_python_data_applications

./: .gitignore  README.md
clase2/: setup.py
clase2/ejer_poetry/: pyproject.toml
clase2/pda/: constants.py
clase2/pda.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
clase2/pda/app/: data.py
clase2/setup_tools/: constants.py  country_capitals.xlsx
clase2/setup_tools/app/: data.py
clase2/src_ej1/: modulo.py  requeriments.txt  update_moduldes.sh
clase2/src_ej2/: modulo.py
clase4/: Makefile  pyproject.toml
clase4/config_example/: .env.swp  config.ini  config.json  config.yaml
clase4/config_example/pda/: script.py  script_argparse.py  script_click.py  script_configparser.py  script_dot_env.py  script_pyyaml.py
clase4/docstrings/: docstring.py
clase4/docstrings/docs/source/: conf.py  docstring.rst  index.rst  modules.rst
clase4/example_pytest/tests/: test_return_df.py  test_transform_data.py
clase4/memory_profiling/: memory_profile_test.ipynb  script_memory_profiling.py  script_time_with_decorator.py  script_time_with_wraps.py  script_timeit.py
clase4/pda/src/: class-method - static method.ipynb  decorators.ipynb  example.py  example_test.py
clase5/: df_ejercicio6.xlsx  df_ejercicio7.csv  df_ejercicio7.json  pandas-test.ipynb  pyproject.toml
clase6/: Results.xlsx  cfg.py  csv_to_parquet.py  file_to_bucket_google.py  gcp_storage_to_gcp_bq.py  generic-food.parquet  playing_with_parquet.py  pyproject.toml  sript_sql_bq_load_parquet_bucket.txt  test_scd.ipynb  ~$Results.xlsx
